z-index issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ body .main-nav {
   position: fixed;
   text-align: center;
   width: 100%;
-  z-index: 4; }
+  z-index: 21; }
   @media screen and (min-width: 840px) {
     body .main-nav {
       background: rgba(45, 43, 48, 0.8); } }
