--- a/scss/partials/_main-nav.scss
+++ b/scss/partials/_main-nav.scss
@@ -6,7 +6,7 @@
   position: fixed;
   text-align: center;
   width: 100%;
-  z-index: 4;
+  z-index: 21;
 
   @media screen and (min-width: 840px) {
     background: rgba($baltic-sea, .8);
